1.优惠券发放改为较友好的方式 2.合协社区授权第三方 3.